--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.8",
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-player": "^2.9.0",
+    "upgrade": "^1.1.0",
+    "yarn": "^1.22.17",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
