--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build": "expo build:android"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.3.0",
@@ -18,6 +19,7 @@
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
